// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard selectors should return Dashboard 1`] = `
Object {
  "completed": Object {
    "generating": 50,
    "uploading": 25,
  },
  "logs": Object {
    "generating": Array [
      "some-logs...",
    ],
    "uploading": Array [
      "some-logs...",
    ],
  },
  "pollingProcessID": 1,
}
`;

exports[`Dashboard selectors should return Dashboard completed 1`] = `
Object {
  "generating": 50,
  "uploading": 25,
}
`;

exports[`Dashboard selectors should return Dashboard logs 1`] = `
Object {
  "generating": Array [
    "some-logs...",
  ],
  "uploading": Array [
    "some-logs...",
  ],
}
`;

exports[`Dashboard selectors should return Dashboard pollingProcessID 1`] = `1`;
